# codex-switcher

./: .gitignore  README.md  pyproject.toml
docs/superpowers/specs/: 2026-04-04-codex-limit-aware-auto-switch-design.md  2026-04-05-codex-switch-device-auth-and-plan-display-design.md  2026-04-13-codex-switch-isolated-add-parallel-refresh-and-safe-remove-design.md
src/codex_switch/: accounts.py  automation_db.py  automation_models.py  automation_policy.py  automation_pty.py  automation_rpc.py  cli.py  codex_login.py  config.py  daemon_runtime.py  errors.py  fs.py  isolated_codex.py  manager.py  models.py  paths.py  process_guard.py  state.py
tests/: test_accounts.py  test_automation_db.py  test_automation_policy.py  test_automation_pty.py  test_automation_rpc.py  test_cli.py  test_codex_login.py  test_config.py  test_daemon_runtime.py  test_isolated_codex.py  test_manager_add.py  test_manager_automation.py  test_manager_basic.py  test_manager_list.py  test_process_guard.py  test_state.py
