[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-switch"
version = "0.1.0"
description = "Rotate Codex auth snapshots across multiple account aliases"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
requires-python = ">=3.11"
dependencies = ["psutil>=6,<7"]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[project.scripts]
codex-switch = "codex_switch.cli:main"
codex-switchd = "codex_switch.daemon_runtime:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
